--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h3 class="brand-heading">Nouf Yahya </h3>
-            <h4>Web Developer | Product Designer</h4>
+            <h4>Web Developer | Data Analyst</h4>
             <p class="intro-text">
               <br>
             </p>
@@ -103,10 +103,10 @@
            at the moment
             I am learning Data analysis combined with the fundamentals of UX design, since it's the most important field to people nowadays.
             <br/>
-            <p></p>
+            <h5>
 
             <a href="noufyahyaCV.pdf">CV of Nouf Yahya</a>
-          
+          </h5>
           </p>
 
         </div>
