--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               </a>
             </li>
             <li class="list-inline-item banner-social-buttons">
-              <a href="https://www.linkedin.com/in/nouf-yahya-80b036159" class="btn btn-default btn-lg">
+              <a href="http://linkedin.com/in/noufyahyacodes" class="btn btn-default btn-lg">
                 <i class="fa fa-bars fa-fw"></i>
                 <span class="network-name">linkedin</span>
               </a>
