new img section

--- a/index.html
+++ b/index.html
@@ -121,9 +121,10 @@
       </h1>
 
 
-    <div class="row text-center d-flex justify-content-center">
+      <!--
+      <div class="row text-center d-flex justify-content-center">
+          <div class="col-md-4 ">
         
-     <!--<div class="col-md-4 ">
           <div class="card mb-4 text-white bg-dark ">
               <img class="card-img-top" width="200px"  src="/img/behance-1.svg" alt="Card image cap">
               <div class="card-body">
@@ -133,9 +134,9 @@
               </div>
           </div>
       </div>--> 
-      <div class="col-md-4  text-center ">
+      <div class="col-md-4  mx-auto text-center ">
           <div class="card mb-4 text-white bg-dark ">
-              <img class="card-img-top" width="200px" height="auto" src="/img/GitHub-Logos/GitHub_Logo.png" alt="Card image cap">
+              <img class="card-img-top" width="10%" height="auto" src="/img/GitHub-Logos/GitHub_Logo_White.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Projects Site</h5>
                 <p class="card-text">This is my github page, where you will see all of my coding projects.</p>
@@ -155,12 +156,12 @@
         <h1 class="brand-heading">Work Experience</h1>
         </b>
         <h3>INTERN (2 months) @ SDAA </h3>
-        <img id="InMiddleImg" width="30%" height="auto" src="img/IMG_3727.JPG">
+        <img id="InMiddleImg" width="40%" height="auto" src="img/IMG_3727.JPG">
         <h4>
           Sharjah Documentation & Archives Authority .
         </h4>
-        <h3>INTERN (current) @ SCHS </h3>
-        <img id="InMiddleImg" width="30%" height="auto" src="img/schs.jpg">
+        <h3>INTERN (4 months) @ SCHS </h3>
+        <img id="InMiddleImg" width="40%" height="auto" src="img/schs.jpg">
 
       </div>
     </div>
