--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@
               </div>
           </div>
       </div>
+      <div class="col-md-4  mx-auto text-center ">
+          <div class="card mb-4 text-white bg-dark ">
+              <img class="card-img-top" width="10%" height="auto" src="/img/GitHub-Logos/GitHub_Logo_White.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Data Analytics projects on Kaggle</h5>
+                <p class="card-text">This is my Kaggle page where I would post data 
+                  as well as participate in data analysis contests </p>
+                <a href="https://www.kaggle.com/noufbafadhl" class="btn btn-outline-light btn-sm">Github</a>
+              </div>
+          </div>
+      </div>
     </div>
 
 
