--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
            I have done two internships in IT,
             I have helped in product management like websites and applications
            at the moment
-            I am learning Data analysis combined with the fundamentals of UX design, since it's the most important field to people nowadays.
+            I am learning Data analysis basics like python and statistics.
             <br/>
             <h5>
 
