--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h3 class="brand-heading">Nouf Yahya </h3>
-            <h4>Web Developer | Data Analyst</h4>
+            <h4>Data Analyst</h4>
             <p class="intro-text">
               <br>
             </p>
@@ -148,7 +148,7 @@
       </div>
       <div class="col-md-4  mx-auto text-center ">
           <div class="card mb-4 text-white bg-dark ">
-              <img class="card-img-top" width="10%" height="auto" src="/img/GitHub-Logos/GitHub_Logo_White.png" alt="Card image cap">
+              <img class="card-img-top" width="10%" height="auto" src="/img/kaggle.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Data Analytics projects on Kaggle</h5>
                 <p class="card-text">This is my Kaggle page where I would post data 
