adding tableau & Kaggle

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <!-- Projects Section -->
 
   <section name="projects" id="project" class="content-section text-center">
-    <div class="container">
+    <div class="container ">
       <h1 name="projects" id="projects" class="brand-heading text-center">
         <a name="projects" href="#projects" aria-labelledby="projects">Projects</a>
       </h1>
@@ -136,25 +136,32 @@
               </div>
           </div>
       </div>--> 
-      <div class="col-md-4  mx-auto text-center ">
-          <div class="card mb-4 text-white bg-dark ">
-              <img class="card-img-top" width="10%" height="auto" src="/img/GitHub-Logos/GitHub_Logo_White.png" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Projects Site</h5>
-                <p class="card-text">This is my github page, where you will see all of my coding projects.</p>
+     <div class="container text-center row card-deck ">  
+          <div class="  card text-center text-white bg-dark ">
+              <img class="card-img-top d-none d-sm-block"  src="/img/GitHub-Logos/GitHub_Logo_White.png" alt="Card image cap">
+              <div class="card-body ">
+                <h5 class="card-title">Side Projects</h5>
+                <p class="card-text">This is my github page, house of my side projects.</p>
                 <a href="https://github.com/noufyahya" class="btn btn-outline-light btn-sm">Github</a>
               </div>
           </div>
-      </div>
-      <div class="col-md-4  mx-auto text-center ">
-          <div class="card mb-4 text-white bg-dark ">
-              <img class="card-img-top" width="10%" height="auto" src="/img/kaggle.png" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Data Analytics projects on Kaggle</h5>
-                <p class="card-text">This is my Kaggle page where I would post data 
-                  as well as participate in data analysis contests </p>
-                <a href="https://www.kaggle.com/noufbafadhl" class="btn btn-outline-light btn-sm">Github</a>
+       
+          <div class=" card text-center  text-white bg-dark ">
+              <img class="card-img-top 	d-none d-sm-block"  src="/img/kaggle.png" alt="Card image cap">
+              <div class="card-body ">
+                <h5 class="card-title">  Data Projects </h5>
+                <p class="card-text">This is my Kaggle page where I  post data analysis projects </p>
+                <a href="https://www.kaggle.com/noufbafadhl" class="btn btn-outline-light btn-sm">Kaggle</a>
               </div>
+          </div>
+          <div class=" card text-center  text-white bg-dark ">
+              <img class="card-img-top d-none d-sm-block "  src="/img/tableau-logo.png" alt="Card image cap">
+              <div class="card-body ">
+                <h5 class="card-title">  Tableau Public </h5>
+                <p class="card-text"> </p>
+                <a href="https://public.tableau.com/app/profile/nouf3525#!/" class="btn btn-outline-light btn-sm">Tableau</a>
+              </div>
+
           </div>
       </div>
     </div>
