fixing the cards

--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
 
   <!-- Projects Section -->
 
-  <section name="projects" id="project" class="content-section text-center">
-    <div class="container ">
+  <section name="projects" id="project" class="text-center">
+      
+    <div class="container d-inline">
       <h1 name="projects" id="projects" class="brand-heading text-center">
         <a name="projects" href="#projects" aria-labelledby="projects">Projects</a>
       </h1>
@@ -134,12 +135,12 @@
               </div>
           </div>
       </div>--> 
-     <div class="container text-center row card-deck ">  
-          <div class="  card text-center text-white bg-dark ">
-              <img class="card-img-top d-none d-sm-block"  src="/img/GitHub-Logos/GitHub_Logo_White.png" alt="Card image cap">
+     <div class="container   card-deck justify-content-center ">  
+          <div class=" card text-center text-white bg-dark ">
+              <img class="card-img-top d-none d-sm-block card-img"  src="/img/GitHub-Logos/GitHub_Logo_White.png" alt="Card image cap">
               <div class="card-body ">
                 <h5 class="card-title">Side Projects</h5>
-                <p class="card-text">This is my github page, house of my side projects.</p>
+                <p class="card-text">This is my github page, house of my apps & nodejs APIs and other side projects.</p>
                 <a href="https://github.com/noufyahya" class="btn btn-outline-light btn-sm">Github</a>
               </div>
           </div>
@@ -156,7 +157,7 @@
               <img class="card-img-top d-none d-sm-block "  src="/img/tableau-logo.png" alt="Card image cap">
               <div class="card-body ">
                 <h5 class="card-title">  Tableau Public </h5>
-                <p class="card-text"> </p>
+                <p class="card-text">Here are my dashboards made from several datasets</p>
                 <a href="https://public.tableau.com/app/profile/nouf3525#!/" class="btn btn-outline-light btn-sm">Tableau</a>
               </div>
 
