--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <section name="projects" id="project" class="text-center">
       
-    <div class="container d-inline">
+    <div class="container ">
       <h1 name="projects" id="projects" class="brand-heading text-center">
         <a name="projects" href="#projects" aria-labelledby="projects">Projects</a>
       </h1>
